--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
     "cheerio": "^1.1.2",
+    "framer-motion": "^12.23.24",
     "next": "16.0.5",
     "react": "19.2.0",
     "react-chartjs-2": "^5.3.1",
